crates/anvil-tui/src/surfaces/status/snapshots/anvil_tui__surfaces__status__render__tests__snapshot_results_focused.snap
---
source: crates/anvil-tui/src/surfaces/status/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
[[fg:#D95A00,bold]‡[fg:#D95A00,bold]][fg:#D95A00,bold] a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]S[fg:#EBEBEB]t[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]u[fg:#EBEBEB]s[fg:#EBEBEB]                                                              
┌[fg:#85858A] [fg:#85858A]H[fg:#85858A]o[fg:#85858A]o[fg:#85858A]k[fg:#85858A]s[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#85858A] [fg:#85858A] [fg:#85858A]*[fg:#85858A] [fg:#85858A]i[fg:#85858A]n[fg:#85858A]s[fg:#85858A]t[fg:#85858A]a[fg:#85858A]l[fg:#85858A]l[fg:#85858A]e[fg:#85858A]d[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]o[fg:#85858A] [fg:#85858A]n[fg:#85858A]o[fg:#85858A]t[fg:#85858A] [fg:#85858A]i[fg:#85858A]n[fg:#85858A]s[fg:#85858A]t[fg:#85858A]a[fg:#85858A]l[fg:#85858A]l[fg:#85858A]e[fg:#85858A]d[fg:#85858A]                                               │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]*[fg:#2E8B57] [fg:#2E8B57]p[fg:#EBEBEB]r[fg:#EBEBEB]e[fg:#EBEBEB]-[fg:#EBEBEB]c[fg:#EBEBEB]o[fg:#EBEBEB]m[fg:#EBEBEB]m[fg:#EBEBEB]i[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#85858A] [fg:#85858A].[fg:#85858A]h[fg:#85858A]u[fg:#85858A]s[fg:#85858A]k[fg:#85858A]y[fg:#85858A]/[fg:#85858A]p[fg:#85858A]r[fg:#85858A]e[fg:#85858A]-[fg:#85858A]c[fg:#85858A]o[fg:#85858A]m[fg:#85858A]m[fg:#85858A]i[fg:#85858A]t[fg:#85858A]                                             │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]o[fg:#85858A] [fg:#85858A]c[fg:#EBEBEB]o[fg:#EBEBEB]m[fg:#EBEBEB]m[fg:#EBEBEB]i[fg:#EBEBEB]t[fg:#EBEBEB]-[fg:#EBEBEB]m[fg:#EBEBEB]s[fg:#EBEBEB]g[fg:#EBEBEB] [fg:#85858A] [fg:#85858A].[fg:#85858A]h[fg:#85858A]u[fg:#85858A]s[fg:#85858A]k[fg:#85858A]y[fg:#85858A]/[fg:#85858A]c[fg:#85858A]o[fg:#85858A]m[fg:#85858A]m[fg:#85858A]i[fg:#85858A]t[fg:#85858A]-[fg:#85858A]m[fg:#85858A]s[fg:#85858A]g[fg:#85858A]                                             │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
┌[fg:#85858A] [fg:#85858A]P[fg:#85858A]r[fg:#85858A]o[fg:#85858A]f[fg:#85858A]i[fg:#85858A]l[fg:#85858A]e[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#85858A]A[fg:#85858A]c[fg:#85858A]t[fg:#85858A]i[fg:#85858A]v[fg:#85858A]e[fg:#85858A]:[fg:#85858A] [fg:#85858A]d[fg:#D95A00,bold]e[fg:#D95A00,bold]v[fg:#D95A00,bold]                                                                   │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]*[fg:#EBEBEB] [fg:#EBEBEB]e[fg:#EBEBEB]s[fg:#EBEBEB]l[fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]t[fg:#EBEBEB]                                                                    │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]*[fg:#EBEBEB] [fg:#EBEBEB]s[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]r[fg:#EBEBEB]e[fg:#EBEBEB]t[fg:#EBEBEB]-[fg:#EBEBEB]s[fg:#EBEBEB]c[fg:#EBEBEB]a[fg:#EBEBEB]n[fg:#EBEBEB]                                                               │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]*[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]r[fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB]i[fg:#EBEBEB]t[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]t[fg:#EBEBEB]u[fg:#EBEBEB]r[fg:#EBEBEB]e[fg:#EBEBEB]                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
┌[fg:#D95A00] [fg:#D95A00,bold]R[fg:#D95A00,bold]e[fg:#D95A00,bold]c[fg:#D95A00,bold]e[fg:#D95A00,bold]n[fg:#D95A00,bold]t[fg:#D95A00,bold] [fg:#D95A00,bold]R[fg:#D95A00,bold]u[fg:#D95A00,bold]n[fg:#D95A00,bold]s[fg:#D95A00,bold] [fg:#D95A00,bold]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┐[fg:#D95A00]
│[fg:#D95A00]>[fg:#EBEBEB]>[fg:#EBEBEB] [fg:#EBEBEB]*[fg:#2E8B57] [fg:#2E8B57]5[fg:#EBEBEB,bold]/[fg:#EBEBEB,bold]5[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]c[fg:#EBEBEB,bold]h[fg:#EBEBEB,bold]e[fg:#EBEBEB,bold]c[fg:#EBEBEB,bold]k[fg:#EBEBEB,bold]s[fg:#EBEBEB,bold] [fg:#EBEBEB,bold] [fg:#EBEBEB,bold]2[fg:#85858A]4[fg:#85858A]0[fg:#85858A]0[fg:#85858A]m[fg:#85858A]s[fg:#85858A] [fg:#85858A] [fg:#85858A]2[fg:#85858A]0[fg:#85858A]2[fg:#85858A]6[fg:#85858A]-[fg:#85858A]0[fg:#85858A]3[fg:#85858A]-[fg:#85858A]1[fg:#85858A]6[fg:#85858A]T[fg:#85858A]1[fg:#85858A]0[fg:#85858A]:[fg:#85858A]0[fg:#85858A]0[fg:#85858A]:[fg:#85858A]0[fg:#85858A]0[fg:#85858A]Z[fg:#85858A]                                 │[fg:#D95A00]
│[fg:#D95A00] [fg:#EBEBEB] [fg:#EBEBEB]x[fg:#CF5E5E] [fg:#CF5E5E]3[fg:#EBEBEB]/[fg:#EBEBEB]5[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]k[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]1[fg:#85858A]8[fg:#85858A]0[fg:#85858A]0[fg:#85858A]m[fg:#85858A]s[fg:#85858A] [fg:#85858A] [fg:#85858A]2[fg:#85858A]0[fg:#85858A]2[fg:#85858A]6[fg:#85858A]-[fg:#85858A]0[fg:#85858A]3[fg:#85858A]-[fg:#85858A]1[fg:#85858A]5[fg:#85858A]T[fg:#85858A]1[fg:#85858A]5[fg:#85858A]:[fg:#85858A]3[fg:#85858A]0[fg:#85858A]:[fg:#85858A]0[fg:#85858A]0[fg:#85858A]Z[fg:#85858A]                                  │[fg:#D95A00]
│[fg:#D95A00]                                                                              │[fg:#D95A00]
│[fg:#D95A00]                                                                              │[fg:#D95A00]
│[fg:#D95A00]                                                                              │[fg:#D95A00]
└[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┘[fg:#D95A00]
j[fg:#85858A]/[fg:#85858A]k[fg:#85858A] [fg:#85858A]n[fg:#85858A]a[fg:#85858A]v[fg:#85858A]i[fg:#85858A]g[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A] [fg:#85858A] [fg:#85858A]h[fg:#85858A]/[fg:#85858A]l[fg:#85858A] [fg:#85858A]s[fg:#85858A]w[fg:#85858A]i[fg:#85858A]t[fg:#85858A]c[fg:#85858A]h[fg:#85858A] [fg:#85858A]p[fg:#85858A]a[fg:#85858A]n[fg:#85858A]e[fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]z[fg:#85858A] [fg:#85858A]z[fg:#85858A]o[fg:#85858A]o[fg:#85858A]m[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]s[fg:#85858A]c[fg:#85858A] [fg:#85858A]b[fg:#85858A]a[fg:#85858A]c[fg:#85858A]k[fg:#85858A] [fg:#85858A] [fg:#85858A]q[fg:#85858A] [fg:#85858A]q[fg:#85858A]u[fg:#85858A]i[fg:#85858A]t[fg:#85858A]   [[fg:#85858A]‡[fg:#85858A]][fg:#85858A] [fg:#85858A]a[fg:#85858A] [fg:#85858A]n[fg:#85858A] [fg:#85858A]v[fg:#85858A] [fg:#85858A]i[fg:#85858A] [fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]X[fg:#85858A].[fg:#85858A]Y[fg:#85858A].[fg:#85858A]Z[fg:#85858A]
